app/assets/stylesheets/application.tailwind.css
/* ... */
.pagy-nav.pagination {
  @apply inline-flex -space-x-px rounded-md shadow-sm isolate;
}

.page.next a {
  @apply flex items-center justify-center h-full py-1.5 px-3 leading-tight text-slate-500 bg-white rounded-r-lg border border-slate-300 hover:bg-slate-100 hover:text-slate-700 dark:bg-slate-800 dark:border-slate-700 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white;
}

.page.prev a {
  @apply flex items-center justify-center h-full py-1.5 px-3 ml-0 text-slate-500 bg-white rounded-l-lg border border-slate-300 hover:bg-slate-100 hover:text-slate-700 dark:bg-slate-800 dark:border-slate-700 dark:text-slate-400 dark:hover:bg-slate-700 dark:hover:text-white;
}

.page.next.disabled {
  @apply flex items-center justify-center h-full py-1.5 px-3 ml-0 text-slate-500 bg-slate-50 rounded-r-lg border border-slate-300 dark:bg-slate-900 dark:border-slate-700 dark:text-slate-400 cursor-not-allowed;
}

.page.prev.disabled {
  @apply flex items-center justify-center h-full py-1.5 px-3 ml-0 text-slate-500 bg-slate-50 rounded-l-lg border border-slate-300 dark:bg-slate-900 dark:border-slate-700 dark:text-slate-400 cursor-not-allowed;
}

.page a,
.page.gap {
  @apply relative inline-flex items-center px-4 py-2 text-sm font-medium bg-white border text-slate-900 border-slate-200 focus:outline-none hover:bg-slate-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-slate-200 dark:focus:ring-slate-700 dark:bg-slate-800 dark:text-slate-400 dark:border-slate-600 dark:hover:text-white dark:hover:bg-slate-700;
}

.page.active {
  @apply z-10 flex items-center justify-center px-3 py-2 text-sm leading-tight border text-primary-600 bg-primary-50 border-primary-300 hover:bg-primary-100 hover:text-primary-700 dark:border-slate-700 dark:bg-slate-800 dark:text-white;
}

.pagy-info {
  @apply text-sm font-normal text-slate-500 dark:text-slate-400;
}

div.field_with_errors > :is(select) {
  @apply text-red-900 placeholder-red-300 border-red-700;
}

.table-container table:not(:has(tbody td)) {
  display: none;
}

.table-container:not(:has(td)) .empty_state_message {
  display: block;
}

.table-container .empty_state_message {
  display: none;
}

.samples-app,
.activity-app {
  height: calc(100vh - 50px - 32px);
  max-height: calc(100vh - 50px - 32px);
  display: flex;
  flex-direction: column;
}

.scrollbar::-webkit-scrollbar {
  width: 0.75rem;
  height: 0.75rem;
}

.scrollbar::-webkit-scrollbar-thumb {
  --tw-bg-opacity: 1 !important;
  @apply bg-slate-300 dark:bg-slate-600;
  border-radius: 0.25rem;
}

.scrollbar::-webkit-scrollbar-corner {
  display: none;
}

